--- a/default.conf.template
+++ b/default.conf.template
@@ -3,10 +3,10 @@ server {
 
   server_name locatlhost;
 
-  ssl_certificate     /etc/nginx/certificate.pem
-  ssl_certificate_key /etc/nginx/key.pem
-  ssl_protocols       TLSv1.2 TLSv1.3;
-  ssl_ciphers         HIGH:!aNULL:!MD5;
+  ssl_certificate /etc/nginx/certificate.pem;
+  ssl_certificate_key /etc/nginx/key.pem;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!aNULL:!MD5;
   ssl_prefer_server_ciphers on;
 
   ssl_verify_client on;
