--- a/default.conf.template
+++ b/default.conf.template
@@ -1,13 +1,15 @@
+error_log stderr info;
+
 server {
-  listen $PORT default_server;
+  listen 443 ssl http2 $PORT default_server;
 
   server_name locatlhost;
 
-  ssl_certificate /etc/nginx/certificate.pem;
-  ssl_certificate_key /etc/nginx/key.pem;
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!aNULL:!MD5;
-  ssl_prefer_server_ciphers on;
+  #ssl_certificate /etc/nginx/certificate.pem;
+  #ssl_certificate_key /etc/nginx/key.pem;
+  #ssl_protocols TLSv1.2 TLSv1.3;
+  #ssl_ciphers HIGH:!aNULL:!MD5;
+  #ssl_prefer_server_ciphers on;
 
   ssl_verify_client on;
   ssl_verify_depth 4; # Allow intermediate CAs
