--- a/default.conf.template
+++ b/default.conf.template
@@ -7,6 +7,7 @@ server {
 
   #ssl_certificate /etc/nginx/certificate.pem;
   #ssl_certificate_key /etc/nginx/key.pem;
+  ssl_certificate /etc/pki/tls/certs/ca-bundle.crt;
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_ciphers HIGH:!aNULL:!MD5;
   ssl_prefer_server_ciphers on;
