--- a/default.conf.template
+++ b/default.conf.template
@@ -5,10 +5,8 @@ server {
 
   server_name localhost;
 
-  #ssl_certificate /etc/nginx/certificate.pem;
-  #ssl_certificate_key /etc/nginx/key.pem;
-  ssl_certificate /etc/pki/tls/certs/ca-bundle.crt;
-  ssl_certificate_key /etc/pki/tls/certs/ca-bundle.key;
+  ssl_certificate /etc/nginx/server.crt;
+  ssl_certificate_key /etc/nginx/server.key;
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_ciphers HIGH:!aNULL:!MD5;
   ssl_prefer_server_ciphers on;
