--- a/default.conf.template
+++ b/default.conf.template
@@ -1,13 +1,13 @@
 #error_log stderr info;
 
 server {
-  listen $PORT default_server;
+  listen $PORT ssl default_server;
   #listen $PORT ssl http2 default_server;
 
   #server_name localhost;
 
-  #ssl_certificate /etc/nginx/server.crt;
-  #ssl_certificate_key /etc/nginx/server.key;
+  ssl_certificate /etc/nginx/server.crt;
+  ssl_certificate_key /etc/nginx/server.key;
   #ssl_protocols TLSv1.2 TLSv1.3;
   #ssl_ciphers HIGH:!aNULL:!MD5;
   #ssl_prefer_server_ciphers on;
